# move-everything-surge

./: CMakeLists.txt  README.md  release.json
scripts/: build.sh
src/: help.json  module.json
src/dsp/: surge_plugin.cpp
